--- a/index.html
+++ b/index.html
@@ -12,37 +12,37 @@
 	<div class="col-md-4 " >
 		<div class="text-right">
 			<img src="https://scontent-hkg3-1.xx.fbcdn.net/hphotos-xtf1/v/t1.0-9/11112941_969227929768979_9115772204709869925_n.jpg?oh=eb54fd73b6e34149f831d259de4b99ba&oe=5675EAF5" class="img img-rounded owner-pic">
-			<h2 class="text-right">{{resumeDetails.name}}</h2>
+			<h2 class="text-right"><b>{{resumeDetails.name}}</b></h2>
 			<h5 class="text-right"><i class="fa fa-home fa-lg"></i> {{resumeDetails.address}}</h5>
-			<h5 class="text-right"><i class="fa fa-envelope-o "></i> {{resumeDetails.emailAddress}}</h5>
+			<h5 class="text-right"><i class="fa fa-envelope-o fa-lg"></i> {{resumeDetails.emailAddress}}</h5>
 			<h5 class="text-right"><i class="fa fa-mobile fa-lg"></i> {{resumeDetails.cellphoneNum}}</h5>
 			<h5 class="text-right"><i class="fa fa-github-square fa-lg"></i> {{resumeDetails.github}}</h5>
 			<h5 class="text-right"><i class="fa fa-facebook-official fa-lg"></i> {{resumeDetails.facebook}}</h5>
 			<hr>
 		</div>
-		<h3>Technologies</h3>	
-		<div class="logo-group">
-		<h4>Development Tools</h4>
+		<h3><b>Technologies</b></h3>	
+		<div class="logo-group col-md-12 col-sm-12 col-xs-12">
+		<h4>Web Development Tools</h4>
 		<ul >
 			<li class="logo-holder" ng-repeat="tool in resumeDetails.technologies.webDev"> <img src=".\src\logos\{{tool}}.svg" class="logo">{{tool}}</li>
 		</ul>		
 		</div>
 
-		<div class="logo-group">
+		<div class="logo-group col-md-12 col-sm-6 col-xs-5">
 		<h4>Database</h4>
 		<ul class="logo-group">
 			<li class="logo-holder" ng-repeat="db in resumeDetails.technologies.database"> <img src=".\src\logos\{{db}}.svg" class="logo"> {{db}}</li>
 		</ul>
 		</div>
 
-		<div class="logo-group">
+		<div class="logo-group col-md-12 col-sm-6 col-xs-5">
 		<h4>Package Managers</h4>
 		<ul class="logo-group">			
 			<li class="logo-holder" ng-repeat="packageManager in resumeDetails.technologies.packageManagers"> <img src=".\src\logos\{{packageManager}}.svg" class="logo"> {{packageManager}}</li>
 		</ul>
 		</div>
 
-		<div class="logo-group">
+		<div class="logo-group col-md-12 col-sm-12 col-xs-2">
 		<h4>Task Runner</h4>
 		<ul class="logo-group">			
 			<li class="logo-holder" ng-repeat="taskRunner in resumeDetails.technologies.taskRunner"> <img src=".\src\logos\{{taskRunner}}.svg" class="logo"> {{taskRunner}}</li>
@@ -50,25 +50,24 @@
 		</div>
 		
 	</div>
-	<div class="col-md-8" >
-		<h3>Objective</h3>
+	<div class="col-md-8 pull-left" >
+		<h3><b>Objective</b></h3>
 		<p>{{resumeDetails.objective}}</p>
 		<hr>
 
-		<h3>Education</h3>
-		<h3>{{resumeDetails.education.school}}</h3>
+		<h3><b>Education</b></h3>
+		<h4>{{resumeDetails.education.school}} <small class="pull-right">{{resumeDetails.education.year}}</small></h3>
 		<p>{{resumeDetails.education.location}}</p>
-		<p>{{resumeDetails.education.course}} </p>
-		<p>{{resumeDetails.education.year}}</p>
+		<p>{{resumeDetails.education.course}} </p>		
 
 		<hr>
-		<h3>Experiences</h3>
+		<h3><b>Experiences</b></h3>
 		<div ng-repeat="exp in resumeDetails.experience">
-			<h3>{{exp.employer}} <small class="pull-right">{{exp.startDate | date: "MMM dd yyyy"}} - {{exp.endDate | date: "MMM dd yyyy"}}</small></h3>
+			<h4><b>{{exp.employer}}</b> <small class="pull-right">{{exp.startDate | date: "MMM dd yyyy"}} - {{exp.endDate | date: "MMM dd yyyy"}}</small></h3>
 			<h4>Projects</h4>
 			<ul>
 				<li ng-repeat="project in exp.projects">
-					<h4>{{project.name}}</h5>
+					<h5><strong>{{project.name}}</strong></h5>
 					<p ng-show="project.url"><i class="fa fa-globe"></i> {{project.url}}</p>
 					<p><i class="fa fa-align-justify"></i> {{project.description}}</p>
 					<h4>Technologies Used</h4>
@@ -77,12 +76,13 @@
 					<ul>
 						<li ng-repeat="contrib in project.contributions"> {{contrib}}</li>
 					</ul>
+					<hr>
 				</li>
 			</ul>
 		</div>
 	</div>
 </div>
-<div class="footer"> <p>&nbsp;Powered By:</p>
+<div class="footer"> <p>&nbsp;Powered By: <strong><i class="fa fa-check-circle"></i>Ready to print! </strong></p>
 	<a href="https://angularjs.org/" target="_blank"><img src="src\logos\angularjs.svg"></a>
 	<a href="http://www.getbootstrap.com" target="_blank"><img src="src\logos\bootstrap.svg"></a>
 	<a href="http://www.github.com/kenblizzard/resume" target="_blank"><img src="src\logos\github.svg"></a>
