--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="bower_components\bootstrap\dist\css\bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="bower_components\fontawesome\css\font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="src\styles.css">
-	<script type="text/javascript" src="bower_components\angular\angular.js"></script>
+	<script type="text/javascript" src="bower_components\angular\angular.min.js"></script>
 	<script type="text/javascript" src="src\app.js"></script>
 </head>
 <body ng-app="resume" >
