--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	</div>
 </div>
 <div class="footer"> <p>&nbsp;Powered By: <strong><i class="fa fa-check-circle"></i>Ready to print! </strong></p>
-	<a href="https://angularjs.org/" target="_blank"><img src="src\logos\angularjs.svg"></a>
+	<a href="https://angularjs.org/" target="_blank"><img src="src\logos\AngularJS.svg"></a>
 	<a href="http://www.getbootstrap.com" target="_blank"><img src="src\logos\bootstrap.svg"></a>
 	<a href="http://www.github.com/kenblizzard/resume" target="_blank"><img src="src\logos\github.svg"></a>
 </div>
