--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Kenneth Bolico</title>
 	<link rel="stylesheet" type="text/css" href="bower_components\bootstrap\dist\css\bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="bower_components\fontawesome\css\font-awesome.min.css">
