--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 		</div>
 	</div>
 </div>
-<div class="footer"> <p>&nbsp;Powered By: <strong><i class="fa fa-check-circle"></i>Ready to print! </strong></p>
+<!--<div class="footer"> <p>&nbsp;Powered By: <strong><i class="fa fa-check-circle"></i>Ready to print! </strong></p>
 	<a href="https://angularjs.org/" target="_blank"><img src="src\logos\AngularJS.svg"></a>
 	<a href="http://www.getbootstrap.com" target="_blank"><img src="src\logos\Bootstrap.svg"></a>
 	<a href="http://www.github.com/kenblizzard/resume" target="_blank"><img src="src\logos\github.svg"></a>
-</div>
+</div>-->
 </body>
 </html>
