--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>-->
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script type="text/javascript" src="src/app.js"></script>
     <base href="#/"/>
 </head>
