--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="src/css/animated-nav-btn.css" />
     <!--    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>-->
+    <script src="bower_components/particles/particles.min.js"></script>
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-animate/angular-animate.min.js"></script>
@@ -15,6 +16,9 @@
     <base href="#/"/>
 </head>
 <body ng-app="resume">
+
+    <div id="particles-js" style="position:absolute; width: 100%; height: 100%; z-index: -1; top: 0px;"></div>
+
 
     <nav>
         <button id="navbtn" class="nav-btn grid-button rearrange " style="">
@@ -41,6 +45,10 @@
         </div>
     </nav>
     <script>
+
+        particlesJS.load('particles-js', 'bower_components/particles/particles.json', function () {
+            console.log('callback - particles.js config loaded');
+        });
         
         window.onload = function () {
             var navBtn = document.getElementById('navbtn');
