--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body ng-app="resume">
 
-    <div id="particles-js" style="position:absolute; width: 100%; height: 100%; z-index: -1; top: 0px;"></div>
+    <div id="particles-js" style="position:fixed; width: 100%; height: 100%; z-index: -1; top: 0px; background: center center no-repeat fixed"></div>
 
 
     <nav>
