updated background color and font color. updated link animations

--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
                 }
             }
 
+            var nextPageUrl = document.querySelectorAll('a.page-link')[0].href;
+
+            // just guessing how swiping works, I haven't looked through your library
+            document.body.onswiperight = function () {
+                alert();
+                window.location.href = nextPageUrl;
+            };
             
         }
 
