--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div class="container" ng-view></div>
     <script type="text/javascript">
 (function(d,s,id){var z=d.createElement(s);z.type="text/javascript";z.id=id;z.async=true;z.src="//static.zotabox.com/3/6/36594d208b95b989b795f2abe29a5b97/widgets.js";var sz=d.getElementsByTagName(s)[0];sz.parentNode.insertBefore(z,sz)}(document,"script","zb-embed-code"));
-setTimeout(document.getElementsByClassName('ztb-about')[0].outerHTML="",5000);
+setTimeout(console.log('hello'); document.getElementsByClassName('ztb-about')[0].outerHTML="",15000);
     </script>
 
 </body>
