updated logo and icons

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Kenneth Bolico</title>
+	<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="bower_components/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="src/css/styles.css">
-    <link rel="stylesheet" href="src/css/animated-nav-btn.css" />
+    <link rel="stylesheet" href="src/css/animated-nav-btn.css" />	
     <!--    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>-->
     <script src="bower_components/particles/particles.min.js"></script>
