--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 		var SCCP = (numberShares * numPricePerShare) * 0.0001;
 		var salesTax = 0;
 		if(document.getElementById('radioSell').checked) {
-		    salesTax = (numberShares * numPricePerShare) * 0.0001;
+		    salesTax = (numberShares * numPricePerShare) * 0.005;
 		}
 
 		var total = commission + vat + PSEtransFee + SCCP + salesTax;
-		document.getElementById('totalFee').innerHTML = total;
+		document.getElementById('totalFee').innerHTML = total + " PHP";
 
 	    }
 	</script>
