--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			document.getElementById('totalPrice').innerHTML = Number(((numberShares*numPricePerShare)-total)).toFixed(2) + " PHP";
 		}    
 		else {
-			document.getElementById('totalPrice').innerHTML = Number(((numberShares*numPricePerShare)-total)).toFixed(2) + " PHP";
+			document.getElementById('totalPrice').innerHTML = Number(((numberShares*numPricePerShare)+total)).toFixed(2) + " PHP";
 		}
 
 	    }
