--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <button id="navbtn" class="nav-btn grid-button rearrange " style="">
             <span class="grid"></span>
         </button>
-        <div id="nav-menu" class="container rollOut   nav-menu">
+        <div id="nav-menu" class="container-fluid rollOut   nav-menu">
             <a class="col-md-4 col-xs-4 nav-item" href="#/" data-url="index">
                 <i class="fa fa-home fa-5x"></i>
                 <h1><span class="caption">Home</span></h1>
