--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
                 }
             }
 
+		if(document.querySelectorAll('a.page-link')[0]) {
             var nextPageUrl = document.querySelectorAll('a.page-link')[0].href;
+		}
 
             // just guessing how swiping works, I haven't looked through your library
             document.body.onswiperight = function () {
