--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
 
 
     <nav>
-        <button id="navbtn" class="nav-btn grid-button rearrange " style="">
+        <button id="navbtn" class="nav-btn grid-button rearrange " >
             <span class="grid"></span>
         </button>
         <div id="nav-menu" class="container-fluid rollOut   nav-menu">
-            <a class="col-md-4 col-xs-4 nav-item" href="#/" data-url="index">
+            <a class="col-md-12 col-xs-12 nav-item" href="#/" data-url="index" style="max-height:33%">
                 <i class="fa fa-home fa-5x"></i>
                 <h1><span class="caption">Home</span></h1>
             </a>
-            <a class="col-md-4 col-xs-4  nav-item" href="#/me" data-url="about">
+            <a class="col-md-12 col-xs-12  nav-item" href="#/me" data-url="about" style="max-height:33%">
                 <span class="fa fa-user fa-5x"></span>
                 <h1><span class="caption">About Me</span></h1>
             </a>
-            <a class="col-md-4 col-xs-4  nav-item" href="#/connect">
+            <a class="col-md-12 col-xs-12  nav-item" href="#/connect" style="max-height:33%">
                 <span class="fa fa-link fa-5x"></span>
                 <h1><span class="caption">Connect</span></h1>
             </a>
